syntax = "proto3";

option java_multiple_files = true;
option java_package = "it.unibo.tuprolog.solve.lpaas";
option java_outer_classname = "LPaaS";

package lpaas;

service Greeter {
  rpc SayHello(HelloRequest) returns (HelloReply) { }

  rpc SayHelloToBunch(ArrayOfHelloRequests) returns (HelloReply) { }

  rpc SayHelloToBunchAsStream(ArrayOfHelloRequests) returns (stream HelloReply) { }

  rpc SayHelloToMany(stream HelloRequest) returns (HelloReply) { }

  rpc SayHelloToManyAsStream(stream HelloRequest) returns ( stream HelloReply) { }
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message ArrayOfHelloRequests {
  repeated HelloRequest items = 1;
}
